<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/homeFragment"
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            />
    <item
            android:id="@+id/bookFragment"
            android:title="@string/book"
            android:icon="@drawable/ic_book"
            />
    <item
            android:id="@+id/createFragment"
            android:title=""
            android:icon="@drawable/ic_add"
            />
    <item
            android:id="@+id/libraryFragment"
            android:title="@string/library"
            android:icon="@drawable/ic_library"
            />
    <item
            android:id="@+id/profileFragment"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"
            />
</menu>