<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/_16dp"
            android:textSize="@dimen/_20ssp"
            android:id="@+id/reset_password_tv"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_description"
            android:textColor="@color/black"
            android:gravity="start"
            android:layout_marginVertical="@dimen/_20ssp"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_16dp"
            android:textSize="@dimen/_16ssp"
            android:id="@+id/reset_password_description"/>

    <EditText
            app:layout_constraintTop_toBottomOf="@id/reset_password_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColorHint="@color/light_gray"
            android:hint="@string/username_or_email"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:inputType="textEmailAddress"
            android:id="@+id/email_or_username_et"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/celestial_blue"
            android:textStyle="bold"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_or_username_et"
            android:layout_margin="@dimen/_16dp"
            android:paddingVertical="@dimen/_8ssp"
            android:id="@+id/ok_tv"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/celestial_blue"
            android:textStyle="bold"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toStartOf="@+id/ok_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_or_username_et"
            android:layout_margin="@dimen/_16dp"
            android:paddingVertical="@dimen/_8ssp"
            android:id="@+id/cancel_tv"/>

</androidx.constraintlayout.widget.ConstraintLayout>