<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_folder"
            android:textStyle="bold"
            android:textSize="@dimen/_20ssp"
            android:id="@+id/create_folder_tv"
            android:layout_marginTop="@dimen/_10ssp"
            android:layout_marginStart="@dimen/_10ssp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/create_folder_tv"
            android:layout_marginHorizontal="@dimen/_10dp"
            app:helperTextEnabled="true"
            android:id="@+id/folder_til"
            app:helperTextTextColor="@color/red"
            app:hintTextColor="@color/light_gray"
            android:hint="@string/folder_name">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:id="@+id/folder_et"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/folder_til"
            android:layout_marginHorizontal="@dimen/_10dp"
            app:helperTextEnabled="true"
            android:id="@+id/description_til"
            app:hintTextColor="@color/light_gray"
            android:hint="@string/description_optional">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:id="@+id/description_et"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/celestial_blue"
            android:textStyle="bold"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_til"
            android:layout_margin="@dimen/_16dp"
            android:paddingVertical="@dimen/_8ssp"
            android:id="@+id/ok_tv"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/celestial_blue"
            android:textStyle="bold"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toStartOf="@+id/ok_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_til"
            android:layout_margin="@dimen/_16dp"
            android:paddingVertical="@dimen/_8ssp"
            android:id="@+id/cancel_tv"/>


</androidx.constraintlayout.widget.ConstraintLayout>